every todo is for its user

--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -1,32 +1,6 @@
-﻿@model ToDoList.Models.ToDoListModel
+﻿
 @{
     ViewData["Title"] = "Home Page";
 }
 
-<table class="table">
-    <thead>
-        <tr>
-            <th scope="col">Description</th>
-            <th scope="col">AlertOn</th>
-            <th scope="col">CreatedOn</th>
-            <th scope="col">Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var todo in Model.AllToDos)
-        {
-        <tr>
-            <td>@todo.Description</td>
-            <td>@todo.AlertOn</td>
-            <td>@todo.CreatedOn</td>
-            <td>
-                <a class="btn btn-outline-dark" asp-area="" asp-controller="Todo" asp-action="Edit" asp-route-todoId="@todo.Id">Edit</a>
-                <a class="btn btn-outline-dark" asp-area="" asp-controller="Todo" asp-action="Delete" asp-route-todoId="@todo.Id">Delete</a>
-
-            </td>
-        </tr>
-        }
-
-
-    </tbody>
-</table>
+<h5>Welcome to my app</h5>
